--- a/app/javascript/packs/stylesheets/images/edit.scss
+++ b/app/javascript/packs/stylesheets/images/edit.scss
@@ -12,6 +12,10 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+
+        a {
+          color: black;
+        }
       }
     }
 
