--- a/app/javascript/packs/stylesheets/characters/_image_list.scss
+++ b/app/javascript/packs/stylesheets/characters/_image_list.scss
@@ -4,6 +4,10 @@
     margin-bottom: 1em;
   }
 
+  .character-image-column {
+    text-align: center;
+  }
+
   .pagination {
     justify-content: center;
 
