--- a/app/views/universes/index.html.erb
+++ b/app/views/universes/index.html.erb
@@ -5,7 +5,7 @@
     collection_url: ->(x) { universe_url(x) },
     image_helper: ->(x) { get_universe_avatar_image(x) },
     new_url: new_universe_url(@universe),
-    name: "Universes",
+    name: "Universe",
     show_avatar: true
   } %>
 
