--- a/app/views/universes/_card_list.html.erb
+++ b/app/views/universes/_card_list.html.erb
@@ -1,8 +1,7 @@
 <section class="card-list cards">
-  <h2><%= name %></h2>
   <div class="row">
     <div class="col-md-12">
-      <div class="row card-row">
+      <div class="row card-row align-items-start">
         <% if collection.empty? %>
           <%= render partial: "shared/empty_banner", locals: {
             message: "There are no #{name.downcase} yet, create some!"
@@ -14,9 +13,11 @@
             </div>
           <% end %>
         <% end %>
-        <div class="col-md-3">
-          <%= link_to render(partial: "shared/new_button_card"), new_url %>
-        </div>
+      </div>
+      <div class="text-end">
+        <%= link_to new_url do %>
+          <button class="btn btn-primary">New <%= name %></button>
+        <% end %>
       </div>
     </div>
   </div>
