Add link bar for universe.

--- a/app/views/universes/_card_list.html.erb
+++ b/app/views/universes/_card_list.html.erb
@@ -1,4 +1,4 @@
-<section class="card-list cards">
+<section id="#{id}" class="card-list cards">
   <div class="row">
     <div class="col-md-12">
       <div class="row card-row align-items-start">
@@ -21,4 +21,5 @@
       </div>
     </div>
   </div>
+  <hr />
 </section>
