--- a/app/views/universes/show.html.erb
+++ b/app/views/universes/show.html.erb
@@ -2,6 +2,11 @@
 
   <header>
     <h1><%= @universe.name %></h1>
+    <h6>
+      <a href="#character-list">Characters</a> &middot;
+      <a href="#location-list">Locations</a> &middot;
+      <a href="#image-list">Images</a>
+    </h6>
   </header>
 
   <% render partial: "shared/capture_navbar" %>
@@ -9,6 +14,7 @@
   <%= render partial: "universes/card_list", locals: {
     collection: @universe.characters,
     collection_url: ->(x) { character_url(x) },
+    id: "character-list",
     image_helper: ->(x) { get_character_avatar_image(x) },
     new_url: new_universe_character_url(@universe),
     name: "Character",
@@ -18,6 +24,7 @@
   <%= render partial: "universes/card_list", locals: {
     collection: @universe.locations,
     collection_url: ->(x) { location_url(x) },
+    id: "location-list",
     image_helper: ->(x) { get_character_avatar_image(x) },
     new_url: new_universe_location_url(@universe),
     name: "Location",
