--- a/app/views/universes/_card_list.html.erb
+++ b/app/views/universes/_card_list.html.erb
@@ -1,7 +1,7 @@
-<section id="#{id}" class="card-list cards">
+<section class="card-list cards">
   <div class="row">
     <div class="col-md-12">
-      <div class="row card-row align-items-start">
+      <div id="<%=identifier%>" class="row card-row align-items-start">
         <% if collection.empty? %>
           <%= render partial: "shared/empty_banner", locals: {
             message: "There are no #{name.downcase} yet, create some!"
