--- a/app/views/universes/_card_list.html.erb
+++ b/app/views/universes/_card_list.html.erb
@@ -9,7 +9,7 @@
         <% else %>
           <% collection.sort_by{ |e| e.name.downcase }.each do | item | %>
             <div class="col-md-3">
-              <%= link_to render(:partial => "shared/card", locals: { name: item.name, avatar: image_helper.call(item.try(:images)), show_avatar: show_avatar }), collection_url.call(item) %>
+              <%= link_to render(:partial => "shared/card", locals: { name: item.name, avatar: image_helper.call(item.try(:images)), show_avatar: show_avatar }), collection_url.call(item), class: "card-link" %>
             </div>
           <% end %>
         <% end %>
