--- a/app/views/characters/_image_list.html.erb
+++ b/app/views/characters/_image_list.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
     <% @images.each do | image | %>
       <div class="col-md-2 character-image-column">
-        <%= link_to edit_universe_image_url(@character.universe, image) do %>
+        <%= link_to edit_universe_image_url(@character.universe, image), class: "image-link" do %>
           <%= generate_image_tag(image, [250, nil]) %>
         <% end %>
         <span class="image-caption"><%= image.caption %></span>
