Added relationship tests.

--- a/app/views/characters/_new_relationship_form.html.erb
+++ b/app/views/characters/_new_relationship_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: MutualRelationship.new(), url: character_mutual_relationships_url(character), method: "post" do | form | %>
+<%= form_with model: MutualRelationship.new(), url: character_mutual_relationships_url(character), method: "post", class: "new-relationship-form" do | form | %>
   <div class="row">
 
     <div class="col-6 mx-auto">
