--- a/app/views/characters/_relationship_table.html.erb
+++ b/app/views/characters/_relationship_table.html.erb
@@ -3,7 +3,7 @@
   <h2>Relationships</h2>
   <div class="row">
     <div class="col-md-12 mx-auto">
-      <table class="table table-dark table-striped">
+      <table class="table table-dark table-striped relationship-table">
         <thead>
           <tr>
             <th scope="col">Originating Character</th>
