--- a/app/views/characters/_item_list.html.erb
+++ b/app/views/characters/_item_list.html.erb
@@ -9,7 +9,7 @@
     <% else %>
       <% @character.character_items.sort_by{ |e| e.item.name.downcase }.each do | character_item | %>
         <div class="col-md-auto">
-          <span class="badge bg-dark">
+          <span class="badge bg-dark item">
             <span><%= character_item.item.name %></span>
             <% if view == 'edit' %>
               <%= link_to character_item_url(character_item), method: "delete" do %>
