Convert some dependencies to gems.

--- a/app/assets/stylesheets/shared/index.scss
+++ b/app/assets/stylesheets/shared/index.scss
@@ -1,5 +1,5 @@
 @import "./app_footer.scss";
-@import "./card.scss.scss";
+@import "./card.scss";
 @import "./empty_banner.scss";
 @import "./navbar.scss";
 @import "./trix.scss";
