--- a/app/views/images/edit.html.erb
+++ b/app/views/images/edit.html.erb
@@ -4,7 +4,7 @@
 
   <div class="row">
     <div class="col-md-8 image-column">
-      <%= link_to rails_blob_path(@image.image_file, disposition: "attachment") do %>
+      <%= link_to url_for(@image.image_file) do %>
         <%= generate_image_tag(@image, [1000, nil]) %>
       <% end %>
     </div>
@@ -70,4 +70,3 @@
   } %>
 
 </section>
-
