--- a/app/views/universes/index.html.erb
+++ b/app/views/universes/index.html.erb
@@ -1,13 +1,5 @@
 <section class="universes-index-view">
 
-  <%= render partial: "universes/card_list", locals: {
-    collection: @universes,
-    collection_url: ->(x) { universe_url(x) },
-    identifier: "universe-list",
-    image_helper: ->(x) { get_universe_avatar_image(x) },
-    new_url: new_universe_url(@universe),
-    name: "Universe",
-    show_avatar: true
-  } %>
+  <p>Render all universes here.</p>
 
 </section>
