--- a/app/views/shared/_app_footer.html.erb
+++ b/app/views/shared/_app_footer.html.erb
@@ -1,6 +1,6 @@
-<footer class="app-footer">
-  <div class="row">
-    <div class="col-md-8 mx-auto">
+<footer>
+  <div class="grid-x grid-padding-x">
+    <div class="small-12 cell">
       Owner: <%= owner.display_name %>
       <br />
       <% unless collaborators.empty? %>
