--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,46 +1,40 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/">Blackbook 2.0</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <ul class="navbar-nav">
-      <% unless @character.nil? %>
-        <li class="nav-item">
-          <%= link_to "Back to #{@character.universe.name}", universe_url(@character.universe), class: "nav-link"%>
-        </li>
-      <% end %>
-      <% unless @image.nil? %>
-        <li class="nav-item">
-          <%= link_to "Back to #{@image.universe.name}", universe_url(@image.universe), class: "nav-link"%>
-        </li>
-      <% end %>
-    </ul>
-    <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
-      <ul class="navbar-nav">
-        <% unless @universe.nil? %>
-          <li class="nav-item">
-            <%= link_to "Edit Universe", edit_universe_url(@universe), class: "nav-link"%>
-          </li>
-        <% end %>
-        <% unless @character.nil? %>
-          <li class="nav-item">
-            <%= link_to "Edit Character", edit_character_url(@character), class: "nav-link"%>
-          </li>
-        <% end %>
-        <% if user_signed_in? %>
-          <li class="nav-item">
-            <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "nav-link" %>
-          </li>
-        <% else %>
-          <li class="nav-item">
-            <%= link_to "Register", new_user_registration_path, class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Sign in", new_user_session_path, class: "nav-link" %>
-          </li>
-        <% end %>
-      </ul>
-    </div>
-  </div>
+<nav class="navbar">
+
+  <ul class="menu align-right">
+    <li>
+      <a href="/">Blackbook 2.0</a>
+    </li>
+    <% unless @character.nil? %>
+      <li>
+        <%= link_to "Back to #{@character.universe.name}", universe_url(@character.universe)%>
+      </li>
+    <% end %>
+    <% unless @image.nil? %>
+      <li>
+        <%= link_to "Back to #{@image.universe.name}", universe_url(@image.universe)%>
+      </li>
+    <% end %>
+    <% unless @universe.nil? %>
+      <li>
+        <%= link_to "Edit Universe", edit_universe_url(@universe)%>
+      </li>
+    <% end %>
+    <% unless @character.nil? %>
+      <li>
+        <%= link_to "Edit Character", edit_character_url(@character)%>
+      </li>
+    <% end %>
+    <% if user_signed_in? %>
+      <li>
+        <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+      </li>
+    <% else %>
+      <li>
+        <%= link_to "Register", new_user_registration_path %>
+      </li>
+      <li>
+        <%= link_to "Sign in", new_user_session_path %>
+      </li>
+    <% end %>
+  </ul>
 </nav>
