--- a/app/views/universes/show.html.erb
+++ b/app/views/universes/show.html.erb
@@ -2,21 +2,23 @@
 
   <header>
     <h1><%= @universe.name %></h1>
-    <h6>
-      <a href="#character-list">Characters</a> &middot;
-      <a href="#image-list">Images</a>
-    </h6>
   </header>
 
   <% render partial: "shared/capture_navbar" %>
 
-  <ul>
-  <% @universe.characters.each do | character | %>
-    <li>
-      <%= link_to character.name, character_path(character) %>
-    </li>
-  <% end %>
-  </ul>
+  <div class="grid-x grid-padding-x">
+    <% @universe.characters.each do | character | %>
+      <div class="medium-4 cell">
+
+        <div class="card">
+          <div class="card-section">
+            <h4><%= link_to character.name, character_path(character) %></h4>
+          </div>
+        </div>
+
+      </div>
+    <% end %>
+  </div>
 
   <%= render partial: "universes/image_list", locals: {
     images: @images,
