Add character new route back in.

--- a/app/views/shared/_image_list.html.erb
+++ b/app/views/shared/_image_list.html.erb
@@ -4,7 +4,7 @@
       <% if images.empty? %>
         <div class="small-12 cell">
           <%= render partial: "shared/empty_banner", locals: {
-            message: "There are no images yet, create some!"
+            message: "There are no images yet, add some!"
           } %>
         </div>
       <% else %>
