--- a/app/views/characters/new.html.erb
+++ b/app/views/characters/new.html.erb
@@ -1,21 +1,20 @@
 <section class="characters-new-view">
 
-  <div class="row">
-    <div class="col-md-10 mx-auto">
-      <h1>New Character</h1>
+  <div class="grid-container">
+    <div class="grid-x grid-padding-x">
+      <div class="small-12 cell">
+        <h2>New Character</h2>
+      </div>
 
-      <%= form_with model: @new_character, url: universe_characters_url(universe_id: @new_character.universe_id), html: { class: "border border-dark border-2 rounded trix-editor-custom" } do |form| %>
-        <div class="mb-3">
-          <%= form.label :name, class: "form-label" %>
-          <%= form.text_field :name, class: "form-control" %>
-        </div>
-        <div class="mb-3">
-          <%= form.label :content, class: "form-label" %>
-          <%= form.rich_text_area :content %>
-        </div>
-        <%= form.submit "Save", class: "btn btn-primary" %>
-        <%= link_to "Cancel", universe_url(@new_character.universe_id), class: "btn btn-primary" %>
-      <% end %>
+      <div class="large-6 medium-8 large-offset-3 medium-offset-2 cell">
+        <%= form_with model: @new_character, url: universe_characters_url(universe_id: @new_character.universe_id) do |form| %>
+          <%= form.label :name %>
+          <%= form.text_field :name %>
+          <%= form.submit "Save", class: "button" %>
+          <%= link_to "Cancel", universe_url(@new_character.universe_id), class: "alert button" %>
+        <% end %>
+      </div>
+
     </div>
   </div>
 
