--- a/app/views/universes/show.html.erb
+++ b/app/views/universes/show.html.erb
@@ -7,7 +7,7 @@
   <% render partial: "shared/capture_navbar" %>
 
   <div class="grid-x grid-padding-x">
-    <% @universe.characters.each do | character | %>
+    <% @universe.characters.sort_by {|c| c.name }.each do | character | %>
       <div class="medium-2 cell">
 
         <div class="card">
@@ -18,6 +18,10 @@
 
       </div>
     <% end %>
+
+    <div class="small-12 cell">
+      <%= link_to "New Character", new_universe_character_url(@universe), class: "button" %>
+    </div>
   </div>
 
   <%= render partial: "shared/image_form", locals: {
