--- a/app/views/universes/index.html.erb
+++ b/app/views/universes/index.html.erb
@@ -2,14 +2,8 @@
 
     <div class="grid-x grid-padding-x">
       <% @universes.each do | universe | %>
-        <div class="medium-2 cell">
-
-          <div class="card">
-            <div class="card-section">
-              <h5><%= link_to universe.name, universe_path(universe) %></h5>
-            </div>
-          </div>
-
+        <div class="medium-3 cell">
+          <%= link_to universe.name, universe_path(universe), class: "button secondary large" %>
         </div>
       <% end %>
     </div>
