--- a/app/views/universes/index.html.erb
+++ b/app/views/universes/index.html.erb
@@ -1,10 +1,8 @@
 <section class="universes-index-view">
 
-    <div class="grid-x grid-padding-x">
+    <div class="buttongroup">
       <% @universes.each do | universe | %>
-        <div class="medium-3 cell">
           <%= link_to universe.name, universe_path(universe), class: "button secondary large" %>
-        </div>
       <% end %>
     </div>
 
