--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,8 +1,6 @@
 @import "foundation_and_overrides";
 
 @import "./image_list";
-@import "./universe.scss";
-
 
 html, body {
   box-sizing: border-box;
@@ -21,4 +19,60 @@ form {
   label {
     text-align: left;
   }
+}
+
+h1, h2, h3, h4 {
+  text-align: left;
+}
+
+
+ul {
+  list-style-type: none;
+  li {
+    padding-bottom: 1em;
+  }
+}
+
+table {
+  margin-top: 3em;
+  thead, tbody {
+    border: 0;
+    tr {
+      th {
+        text-align: center !important;
+      }
+    }
+  }
+  thead {
+    border-bottom:solid black 1px;
+    tr {
+      background-color: #333333;
+    }
+  }
+  tbody {
+    tr {
+      background-color: #444444;
+      &:nth-child(even) {
+        background-color: #333333;
+      }
+    }
+  }
+}
+
+.button {
+  margin: 0;
+  font-weight: bold;
+}
+
+.image-form {
+  border-bottom: 1px solid #777777;
+  padding: 3em;
+
+  .button {
+    margin-bottom: 1em;
+  }
+}
+
+.buttongroup {
+  margin-bottom: 1em;
 }
