--- a/app/views/universes/edit.html.erb
+++ b/app/views/universes/edit.html.erb
@@ -13,11 +13,12 @@
       </div>
 
       <div class="medium-4 medium-offset-1 cell">
-        <h4>You are collaborating with...</h4>
-        <ul>
+
           <% if @universe.collaborators.empty? %>
-            <li>There are no collaborators in this universe.</li>
+            <h3>There are no collaborators in this universe.<h3>
           <% else %>
+            <h3>You are collaborating with...</h3>
+            <ul>
             <% @universe.collaborations.each do | collaboration | %>
               <li>
                 <span><%= collaboration.user.display_name %></span>
@@ -26,10 +27,10 @@
                 <% end %>
               </li>
             <% end %>
+            </ul>
           <% end %>
-        </ul>
 
-        <h4>You could add...</h4>
+        <h3>You could add...</h3>
         <%= form_with model: Collaboration.new(), url: universe_collaborations_url(@universe), method: "post" do |form| %>
           <%= form.select :user_id, generate_collaborator_names(User.all, @universe.collaborators, @universe.owner), {include_blank: true} %>
           <%= form.submit "Add", class: "button" %>
