--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,4 @@
-@import "foundation_and_overrides";
-
-@import "./image_list";
+@import "bulma";
 
 html, body {
   box-sizing: border-box;
@@ -9,71 +7,4 @@ html, body {
 
 *, *:before, *:after {
   box-sizing: inherit;
-}
-
-section {
-  text-align: center;
-}
-
-form {
-  label {
-    text-align: left;
-  }
-}
-
-h4 {
-  margin-top: 1em;
-  text-align: left;
-}
-
-
-ul {
-  list-style-type: none;
-  li {
-    padding-bottom: 1em;
-  }
-}
-
-table {
-  margin-top: 3em;
-  thead, tbody {
-    border: 0;
-    tr {
-      th {
-        text-align: center !important;
-      }
-    }
-  }
-  thead {
-    border-bottom:solid black 1px;
-    tr {
-      background-color: #333333;
-    }
-  }
-  tbody {
-    tr {
-      background-color: #444444;
-      &:nth-child(even) {
-        background-color: #333333;
-      }
-    }
-  }
-}
-
-.button {
-  margin: 0;
-  font-weight: bold;
-}
-
-.image-form {
-  border-bottom: 1px solid #777777;
-  padding: 3em;
-
-  .button {
-    margin-bottom: 1em;
-  }
-}
-
-.buttongroup {
-  margin-bottom: 1em;
 }
