--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,40 +1,29 @@
-<nav class="navbar">
+<div class="navbar-menu">
 
-  <ul class="menu align-right">
-    <li>
-      <a href="/">Blackbook 2.0</a>
-    </li>
+  <div class="navbar-start">
+    <a class="navbar-item" href="/">
+      Blackbook 2.0
+    </a>
+  </div>
+
+  <div class="navbar-end">
     <% unless @character.nil? %>
-      <li>
-        <%= link_to "Back to #{@character.universe.name}", universe_url(@character.universe)%>
-      </li>
+      <%= link_to "Back to #{@character.universe.name}", universe_url(@character.universe), class: "navbar-item" %>
     <% end %>
     <% unless @image.nil? %>
-      <li>
-        <%= link_to "Back to #{@image.universe.name}", universe_url(@image.universe)%>
-      </li>
+      <%= link_to "Back to #{@image.universe.name}", universe_url(@image.universe), class: "navbar-item" %>
     <% end %>
     <% unless @universe.nil? %>
-      <li>
-        <%= link_to "Edit Universe", edit_universe_url(@universe)%>
-      </li>
+      <%= link_to "Edit Universe", edit_universe_url(@universe), class: "navbar-item" %>
     <% end %>
     <% unless @character.nil? %>
-      <li>
-        <%= link_to "Edit Character", edit_character_url(@character)%>
-      </li>
+      <%= link_to "Edit Character", edit_character_url(@character), class: "navbar-item" %>
     <% end %>
     <% if user_signed_in? %>
-      <li>
-        <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
-      </li>
+      <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "navbar-item" %>
     <% else %>
-      <li>
-        <%= link_to "Register", new_user_registration_path %>
-      </li>
-      <li>
-        <%= link_to "Sign in", new_user_session_path %>
-      </li>
+      <%= link_to "Register", new_user_registration_path, class: "navbar-item" %>
+      <%= link_to "Sign in", new_user_session_path, class: "navbar-item" %>
     <% end %>
-  </ul>
-</nav>
+  </div>
+</div>
