--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar is-dark" role="navigation" aria-label="main navigation">
+<nav id="bb_navbar" class="navbar is-dark" role="navigation" aria-label="main navigation">
 
   <div class="navbar-brand">
     <a class="navbar-item" href="/">
