--- a/app/views/universes/index.html.erb
+++ b/app/views/universes/index.html.erb
@@ -1,9 +1,15 @@
-<section class="universes-index-view">
+<section id="universe_index" class="section">
 
-    <div class="buttongroup">
-      <%= render partial: "shared/universe_table", locals: {
-        universes: @universes.sort_by {|u| u.name }
-      } %>
+  <div class="container">
+    <div class="columns is-centered">
+
+      <div class="buttongroup">
+        <%= render partial: "shared/universe_table", locals: {
+          universes: @universes.sort_by {|u| u.name }
+        } %>
+      </div>
+
     </div>
+  </div>
 
 </section>
